adding ajv to validate object errors

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ajv": "^1.0.0",
+    "ajv": "^6.7.0",
     "tsc": "1.0"
   },
   "devDependencies": {
